--- a/2022-2023/Machine Learning/2.linear-models.org
+++ b/2022-2023/Machine Learning/2.linear-models.org
@@ -539,6 +539,8 @@ visualising this will look something like figure [[fig:lm_learn]].
 
 *** Multiple variables
 
+*** Solving the linear model using Least Squares
+
 * Logistic Regression
 
 ** Classification
