--- a/2022-2023/Programming Level-up/3.modules-development-enivronment.org
+++ b/2022-2023/Programming Level-up/3.modules-development-enivronment.org
@@ -1,26 +1,8 @@
-#+options: ':nil *:t -:t ::t <:t H:3 \n:nil ^:t arch:headline author:t
-#+options: broken-links:nil c:nil creator:nil d:(not "LOGBOOK") date:t e:t email:nil
-#+options: f:t inline:t num:t p:nil pri:nil prop:nil stat:t tags:t tasks:t tex:t
-#+options: timestamp:t title:t toc:t todo:t |:t
 #+title: Programming Level-up
-#+SUBTITLE: Lecture 3 -- Modules & Development Environments
-#+date: 11th October 2021
+#+subtitle: Lecture 3 - Modules & Development Environments
+#+date: <TODO>
 #+author: Jay Morgan
-#+language: en
-#+select_tags: export
-#+exclude_tags: noexport
-#+creator: Emacs 27.1 (Org mode 9.4.6)
-#+cite_export:
-
-#+startup: beamer
-#+LATEX_CLASS: beamer
-#+LATEX_CLASS_OPTIONS: [10pt]
-#+BEAMER_FRAME_LEVEL: 2
-#+BEAMER_THEME: Berkeley
-#+LATEX_HEADER: \setlength{\parskip}{5pt}
-#+LATEX_HEADER: \newcommand{\footnoteframe}[1]{\footnote[frame]{#1}}
-#+LaTeX_HEADER: \addtobeamertemplate{footnote}{}{\vspace{2ex}}
-#+LATEX_HEADER: \usepackage{tabularx}
+#+include: ./header.org
 
 #+name: commentify
 #+begin_src emacs-lisp :var result="" :exports none
@@ -29,26 +11,6 @@
   (dolist (result-item (split-string result "\n"))
     (princ (concat "# => " (format "%s\n" result-item)))))
 #+end_src
-
-#+PROPERTY: header-args:python :results pp output :session :exports both :eval never-export :post commentify(*this*)
-
-#+begin_src emacs-lisp :exports none
-(setq org-latex-minted-options
-      '(("frame" "lines")
-	("linenos=true")
-	("firstnumber=last")
-	("fontsize=\\footnotesize")
-	("xleftmargin=15pt")
-	("numbersep=8pt")))
-#+end_src
-
-#+RESULTS:
-| frame                  | lines |
-| linenos=true           |       |
-| firstnumber=last       |       |
-| fontsize=\footnotesize |       |
-| xleftmargin=15pt       |       |
-| numbersep=8pt          |       |
 
 * Modules
 
@@ -1244,3 +1206,7 @@ Make sure to write tests, for example, using =unittest=
 of bugs/mistakes in your code, and if you change something in the future, you want to
 make sure that it still works. Writing tests can automate the process of testing your
 code.
+
+# Local Variables:
+# org-latex-minted-options: (("frame" "lines") ("linenos=true") ("firstnumber=last") ("fontsize=\\footnotesize") ("bgcolor=LightGray") ("xleftmargin=5pt") ("tabsize=2") ("breaklines=true") ("numbersep=10pt"))
+# End:
