--- a/2022-2023/Programming Level-up/4.numpy.tex
+++ b/2022-2023/Programming Level-up/4.numpy.tex
@@ -1,24 +1,27 @@
-% Created 2021-11-12 ven. 00:06
+% Created 2022-09-11 Sun 08:42
 % Intended LaTeX compiler: pdflatex
 \documentclass[10pt]{beamer}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{graphicx}
-\usepackage{grffile}
 \usepackage{longtable}
 \usepackage{wrapfig}
 \usepackage{rotating}
 \usepackage[normalem]{ulem}
 \usepackage{amsmath}
-\usepackage{textcomp}
 \usepackage{amssymb}
 \usepackage{capt-of}
 \usepackage{hyperref}
 \usepackage{minted}
+\usepackage{xcolor}
+\definecolor{LightGray}{gray}{0.95}
+\usefonttheme{professionalfonts}
 \setlength{\parskip}{5pt}
 \newcommand{\footnoteframe}[1]{\footnote[frame]{#1}}
 \addtobeamertemplate{footnote}{}{\vspace{2ex}}
 \usepackage{tabularx}
+\usepackage{booktabs}
+\DefineVerbatimEnvironment{verbatim}{Verbatim}{fontsize=\scriptsize}
 \usetheme{Berkeley}
 \author{Jay Morgan}
 \date{11th October 2021}
@@ -40,12 +43,12 @@
 
 
 \section{NumPy}
-\label{sec:org0736a47}
+\label{sec:org3c26f4f}
 
 \subsection{What is NumPy}
-\label{sec:org82388ca}
+\label{sec:org8e3defc}
 
-\begin{frame}[label={sec:org089da48},fragile]{What is NumPy?}
+\begin{frame}[label={sec:org0046749},fragile]{What is NumPy?}
  NumPy (\url{https://numpy.org/}) is one of the fundamental Python libraries for scientific
 computing. In essence, its aim is to make vector and array processing in Python much
 more efficient. Therefore, it would be your go-to for (numerical) data
@@ -57,24 +60,24 @@ because NumPy is partly written in C.
 
 For example, if we want to compute the matrix multiplication of two arrays:
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 A = [[1, 4], [9, 5]]  # 2 dimensional 'matrices' A and B
 B = [[1, 2], [3, 4]]
 C = [[0, 0], [0, 0]]  # our result 'pre-allocated' with zeros
 
 for i in range(len(A)):
     for j in range(len(B)):
-	for k in range(len(B)):
-	    C[i][j] += A[i][k] * B[k][j]
+        for k in range(len(B)):
+            C[i][j] += A[i][k] * B[k][j]
 \end{minted}
 \end{frame}
 
-\begin{frame}[label={sec:orgf80f70b},fragile]{What is NumPy?}
+\begin{frame}[label={sec:orgbe0b003},fragile]{What is NumPy?}
  The previous example is quite un-weidly. We have to manually loop through the
 matrices and apply the computation for each element. This can be \alert{very} slow in
 Python. NumPy provides a much cleaner and quicker interface:
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 import numpy as np
 A = np.array([[1, 4], [9, 5]])
 B = np.array([[1, 2], [3, 4]])
@@ -89,26 +92,26 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org0044b6f},fragile]{Install NumPy}
+\begin{frame}[label={sec:org0fbd932},fragile]{Install NumPy}
  Before we can use NumPy, we must first install it if its not already. NumPy can
 easily be installed with one of your package managers of choice. For example, if you
 want to install via conda:
 
-\begin{minted}[]{bash}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{bash}
 conda install numpy
 \end{minted}
 
 or with pip:
 
-\begin{minted}[]{bash}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{bash}
 pip install numpy
 \end{minted}
 \end{frame}
 
-\begin{frame}[label={sec:orgaaf6e59},fragile]{Creating a numpy array}
+\begin{frame}[label={sec:org082596b},fragile]{Creating a numpy array}
  As we've seen previously, we use \texttt{np.array} to create a numpy array from a Python data type
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 A = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])
 print(A)
 \end{minted}
@@ -125,19 +128,19 @@ We've created a 3x3 matrix of integers. Note that, out-of-the-box, NumPy doesn't
 support \emph{ragged arrays} (matrices that are not rectangular), so this will not work as
 you expect:
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 A = np.array([[1], [1, 2]])
 \end{minted}
 \end{frame}
 
 \subsection{Working with NumPy}
-\label{sec:org5fbce2c}
+\label{sec:org68193b1}
 
-\begin{frame}[label={sec:org00af38c},fragile]{Basic attributes}
+\begin{frame}[label={sec:org1f9846c},fragile]{Basic attributes}
  A numpy array has various attributes that are useful for our numerical
 computing. Some of these include:
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 A = np.array([[1, 4], [9, 5]])
 
 print(A.shape)  # the shape of the array
@@ -157,7 +160,7 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:orgc4c3d04},fragile]{Different data types}
+\begin{frame}[label={sec:orgfc0b72f},fragile]{Different data types}
  In the previous example, the elements in the array we \texttt{int64}. But normally, we will
 see \texttt{float64}. However, there are many other available data types, where each of the
 different data types affects how much memory is used to represent the data.
@@ -174,12 +177,12 @@ different data types affects how much memory is used to represent the data.
 \url{https://numpy.org/doc/stable/reference/arrays.dtypes.html}
 \end{frame}
 
-\begin{frame}[label={sec:org990d888},fragile]{Creating arrays with different dtypes}
+\begin{frame}[label={sec:org90f5229},fragile]{Creating arrays with different dtypes}
  When creating a NumPy array, NumPy will select what it thinks to be the most
 appropriate data type. However, we can tell NumPy explicitly what the data type
 should be with the \texttt{dtype} argument.
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 A = np.array([[1, 2], [9, 5]], dtype=np.int8)
 print(A)
 print(A.dtype)
@@ -200,29 +203,29 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org02e172c},fragile]{Different ways of creating arrays}
+\begin{frame}[label={sec:org5e5f39f},fragile]{Different ways of creating arrays}
  NumPy also provides us with a number of different functions to create arrays. Instead
 of doing this:
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 A = np.array([[0, 0], [0, 0]])
 \end{minted}
 
 We could instead use the \texttt{np.zeros} function, passing a tuple where each element of
 the tuple describes how many elements should be made in each dimension:
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 A = np.zeros((2,)) # 1 dimensional
 A = np.zeros((2, 2))  # 2 dimensional
 A = np.zeros((2, 5, 5))  # 3 dimensional
 \end{minted}
 \end{frame}
 
-\begin{frame}[label={sec:org09c96f9},fragile]{Different ways of creating arrays}
+\begin{frame}[label={sec:org8c194f1},fragile]{Different ways of creating arrays}
  Another commonly used array creation function is the \texttt{np.random.randn} function. This
 creates an array where elements are sampled from a normal distribution.
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 A = np.random.randn(2, 2)
 print(A)
 \end{minted}
@@ -238,10 +241,10 @@ Results:
 tuple, we pass multiple arguments to the function.
 \end{frame}
 
-\begin{frame}[label={sec:org22b7243},fragile]{Different ways of creating arrays}
+\begin{frame}[label={sec:org0d3a7d4},fragile]{Different ways of creating arrays}
  It is also convenient to create arrays with ranges of elements.
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 A = np.arange(5, 10) # optional step
 print(A)
 \end{minted}
@@ -252,7 +255,7 @@ Results:
 \end{verbatim}
 
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 A = np.linspace(5, 10, 20)
 print(A)
 \end{minted}
@@ -267,7 +270,7 @@ Results:
 \end{frame}
 
 
-\begin{frame}[label={sec:orgd0adc44},fragile]{Different ways of creating arrays}
+\begin{frame}[label={sec:org544173d},fragile]{Different ways of creating arrays}
  There are many more ways to create arrays. Some include:
 
 \begin{itemize}
@@ -283,14 +286,14 @@ subject: \url{https://numpy.org/doc/stable/user/basics.creation.html}
 \end{frame}
 
 \subsection{Indexing Arrays}
-\label{sec:org23a0001}
+\label{sec:org9211437}
 
-\begin{frame}[label={sec:org8d004ed},fragile]{Slicing NumPy arrays}
+\begin{frame}[label={sec:org603b39d},fragile]{Slicing NumPy arrays}
  In native Python, when we have a 'matrix' like data structure (just a list of lists),
 and we want to access a particular element from this matrix, we have to do something
 like:
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 A = [[1, 2], [3, 4]]
 print(A[1][0])
 \end{minted}
@@ -303,7 +306,7 @@ Results:
 
 However, in NumPy, we seperate the indexes by comma:
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 A = np.array([[1, 2], [3, 4]])
 print(A[1, 0])
 \end{minted}
@@ -314,11 +317,11 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org26a35e3},fragile]{Slicing NumPy Arrays}
+\begin{frame}[label={sec:org78da73f},fragile]{Slicing NumPy Arrays}
  If we wanted to get all elements from the 2nd column we would use the \texttt{:} notation. For
 example:
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 A = np.array([[1, 2], [3, 4]])
 print(A[:, 1])
 \end{minted}
@@ -331,7 +334,7 @@ Results:
 
 Likewise, all elements from the 2nd row:
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 print(A[1, :])
 \end{minted}
 
@@ -341,10 +344,10 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org81015f0},fragile]{Slicing NumPy Arrays}
+\begin{frame}[label={sec:org8127d5f},fragile]{Slicing NumPy Arrays}
  Note that when we slice an array, we are \alert{not copying} the elements:
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 A = np.array([[1, 2], [3, 4]])
 b = A[:, 1]
 
@@ -363,14 +366,14 @@ Results:
 Any modification you make to the \texttt{b} variable will also affect \texttt{A}. For that we must use
 \texttt{.copy()}
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 A = np.array([[1, 2], [3, 4]])
 b = A[:, 1].copy()
 ...
 \end{minted}
 \end{frame}
 
-\begin{frame}[label={sec:org51afc88}]{Slicing NumPy Arrays}
+\begin{frame}[label={sec:org3e63a7e}]{Slicing NumPy Arrays}
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=0.7\textwidth]{./images/indexing.png}
@@ -378,10 +381,10 @@ b = A[:, 1].copy()
 \end{figure}
 \end{frame}
 
-\begin{frame}[label={sec:org7b08e4d},fragile]{Boolean Indexing}
+\begin{frame}[label={sec:orgb8a848c},fragile]{Boolean Indexing}
  NumPy arrays can also be composed of boolean elements
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 A = np.array([[1, -1], [0, 5]])
 print(A > 0)
 \end{minted}
@@ -395,7 +398,7 @@ Results:
 
 And we can also use boolean elements to help with indexing:
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 values_above_zero = A[A > 0]
 print(values_above_zero)
 \end{minted}
@@ -406,11 +409,11 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:orgb46f53c},fragile]{Boolean Indexing}
+\begin{frame}[label={sec:orgb258b18},fragile]{Boolean Indexing}
  Therefore we can apply computations to only part of the array using this indexing
 feature:
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 mask = A > 0
 A[mask] = A[mask] + 10
 print(A)
@@ -424,16 +427,16 @@ Results:
 \end{frame}
 
 \subsection{Reshaping and Resizing}
-\label{sec:org9d38b81}
+\label{sec:org3c5996b}
 
-\begin{frame}[label={sec:orgc2c4eb1},fragile]{Reshape}
+\begin{frame}[label={sec:orga5dff20},fragile]{Reshape}
  After an array has been created, we can modify its structure/shape using various
 functions. The first we shall look at is \texttt{.reshape}. For example, let us create a
 vector of 4 elements and then reshape it into an array of 2x2 elements. Of course,
 the new shape of the array must be proportional to the original number of elements:
 2x2 elements = 4 elements.
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 A = np.arange(1, 5)
 
 mat_A = A.reshape(2, 2)
@@ -449,11 +452,11 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org6d6e4e1},fragile]{Flatten}
+\begin{frame}[label={sec:orgacf11a3},fragile]{Flatten}
  If we wanted to take a 2d array and reshape it into a vector, we could of course use
 the \texttt{.reshape} function again. But we could also use \texttt{.flatten}.
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 flat_A = mat_A.flatten()
 print(flat_A)
 \end{minted}
@@ -464,11 +467,11 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org80770bf},fragile]{Flatten}
+\begin{frame}[label={sec:org49d203e},fragile]{Flatten}
  When specifying the new dimensionality of the reshaped array, \texttt{-1} is a shortcut to
 specify the dimensionality to allow reshaping to occur correctly. For example:
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 A = np.arange(1, 5)
 print(A)
 
@@ -487,10 +490,10 @@ We're telling NumPy to create an array with 2 elements on the 1st dimension, and
 however many elements on the second dimension.
 \end{frame}
 
-\begin{frame}[label={sec:org7b0fd4a},fragile]{Add a dimension}
+\begin{frame}[label={sec:orgf29e5a5},fragile]{Add a dimension}
  We can add and remove dimensions using \texttt{.expand\_dims} and \texttt{.squeeze}, respectively.
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 print(A)
 print(np.expand_dims(A, 1))
 \end{minted}
@@ -509,10 +512,10 @@ We are taking a vector and adding a dimension. Note that we have to use
 \texttt{np.expand\_dims} passing the object we want to expand and not \texttt{A.expand\_dims}.
 \end{frame}
 
-\begin{frame}[label={sec:org9fb8ef8},fragile]{Add a dimension}
+\begin{frame}[label={sec:org7e543b2},fragile]{Add a dimension}
  We can use an indexing trick with \texttt{None} to do the expansion in just the same way:
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 print(A)
 print(A[:, None])
 \end{minted}
@@ -530,10 +533,10 @@ Results:
 Where \texttt{None} indicates to NumPy where we want to add the new dimension.
 \end{frame}
 
-\begin{frame}[label={sec:orge0ac478},fragile]{Remove a dimension}
+\begin{frame}[label={sec:org339f7c5},fragile]{Remove a dimension}
  If we want to instead remove a dimension, we can use \texttt{.squeeze()}
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 print(A[:, None].squeeze(1))
 \end{minted}
 
@@ -547,10 +550,10 @@ We are removing the 2nd dimension, but \alert{note} that the elements must be si
 you cannot squeeze a 2x2 array.
 \end{frame}
 
-\begin{frame}[label={sec:org948241c},fragile]{Matrix transpose}
+\begin{frame}[label={sec:org47931aa},fragile]{Matrix transpose}
  Another useful feature is the matrix transpose:
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 print(mat_A)
 
 print(mat_A.transpose())
@@ -567,7 +570,7 @@ Results:
 
 or even:
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 print(mat_A.T)
 \end{minted}
 
@@ -579,12 +582,12 @@ Results:
 \end{frame}
 
 
-\begin{frame}[label={sec:orgffc74d8},fragile]{Composing arrays}
+\begin{frame}[label={sec:org827f52a},fragile]{Composing arrays}
  If we have multiple arrays we want to 'join' together, we can use \texttt{np.hstack} for
 horizontally joining, or \texttt{np.vstack} for vertically joining arrays. \alert{Note} the dimensions
 must match in the direction your stacking.
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 A = np.array([1, 2, 3])
 B = np.array([4, 5, 6])
 
@@ -597,7 +600,7 @@ Results:
 \end{verbatim}
 
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 print(np.vstack([A, B]))
 \end{minted}
 
@@ -609,19 +612,19 @@ Results:
 \end{frame}
 
 \subsection{Arithmetic Operations}
-\label{sec:org08ea177}
+\label{sec:org3e1f9ff}
 
-\begin{frame}[label={sec:org218bf7e},fragile]{Arithmetic Operations}
+\begin{frame}[label={sec:org43bd15f},fragile]{Arithmetic Operations}
  We have already seen some basic examples of arithmetic operations in NumPy. But its
 worth looking at these in detail.
 
 One of the best reasons to use NumPy is that the computations are \alert{vectorized} and can
 be \alert{broadcast}. We'll see examples of what these mean.
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 A = np.array([1, 2, 3])
 B = np.array([[1, 2, 3],
-	      [4, 5, 6]])
+              [4, 5, 6]])
 
 print(A * B)
 \end{minted}
@@ -637,12 +640,12 @@ We can perform vector and matrix arithmetic using Python's infix operators like 
 etc.
 \end{frame}
 
-\begin{frame}[label={sec:org28f938e},fragile]{Arithmetic Operations}
+\begin{frame}[label={sec:org127a5b8},fragile]{Arithmetic Operations}
  When we perform arithmetic operations, NumPy will convert the data into arrays for
 us. While this can help, its not best practice for vectors and matrices, for scalars
 it will be fine.
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 A = [1, 2, 3]
 
 print(A * B)
@@ -655,12 +658,12 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:orgd3dfa0a},fragile]{Broadcasting}
+\begin{frame}[label={sec:orgd3cf350},fragile]{Broadcasting}
  When we are working with singletons or scalar values, NumPy will automatically
 perform the broadcasting for us. So for example, if we want to double each element of
 an array:
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 print(B * 2)
 \end{minted}
 
@@ -675,7 +678,7 @@ NumPy will automatically broadcast the scalar \texttt{2} to every element of the
 size of \texttt{B}.
 \end{frame}
 
-\begin{frame}[label={sec:orgba8e353}]{Comparison with Functions}
+\begin{frame}[label={sec:orgc047d57}]{Comparison with Functions}
 NumPy provides, in many cases, both infix and function operations.
 
 \begin{center}
@@ -697,11 +700,11 @@ Exponential, Logarithm &  & np.exp, np.log\\
 \url{https://numpy.org/doc/stable/reference/routines.math.html}
 \end{frame}
 
-\begin{frame}[label={sec:org9fe014c},fragile]{More complex operations}
+\begin{frame}[label={sec:orgff6babd},fragile]{More complex operations}
  There are a number of different operations one can perform on a matrix. Such as the
 dot product of two matrices:
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 A = np.array([1, 2])
 B = np.array([[1, 2], [3, 4]])
 print(np.dot(A, B))
@@ -715,7 +718,7 @@ Results:
 
 The inner product:
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 print(np.inner(A, B))
 \end{minted}
 
@@ -725,13 +728,13 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:orgdfb0049},fragile]{More complex operations}
+\begin{frame}[label={sec:orgc7e24db},fragile]{More complex operations}
  One mystical function is the \texttt{einsum} function. This function can effectively replace
 other functions like \texttt{dot} and \texttt{inner} but it takes some understanding on how it
 works. \texttt{einsum} is the application of Einstein Summation, a succinct method of
 describing the multiplication between matrices. Lets first look at an example of the outer product:
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 print(np.einsum('i,ij->j', A, B))
 \end{minted}
 
@@ -743,7 +746,7 @@ Results:
 
 Or the inner product:
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 print(np.einsum('j,ij->i', A, B))
 \end{minted}
 
@@ -753,7 +756,7 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org0068cfb},fragile]{More complex operations}
+\begin{frame}[label={sec:org5b1f08a},fragile]{More complex operations}
  In \texttt{einsum} we are giving a letter for each dimension of each array we pass to the
 function.
 
@@ -768,10 +771,10 @@ very powerful function with a very succinct syntax.
 \url{https://www.youtube.com/watch?v=CLrTj7D2fLM} - Khan Academy - Einstein Summation Convention
 \end{frame}
 
-\begin{frame}[label={sec:orgd7f925a},fragile]{Vectorizing a function}
+\begin{frame}[label={sec:orgc8b4e59},fragile]{Vectorizing a function}
  Lets say you have some function that computes the square of a number:
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 def my_square(x):
     return x**2
 
@@ -787,7 +790,7 @@ Results:
 As the function is simple, it takes one argument and returns one argument, we can
 pass a NumPy array and will get the correct result.
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 A = np.arange(1, 10)
 print(my_square(A))
 \end{minted}
@@ -798,16 +801,16 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org9efa0e2},fragile]{Vectorize a function}
+\begin{frame}[label={sec:orge29972c},fragile]{Vectorize a function}
  However, if the function is more complicated, it will not work.
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 def myfunc(a, b):
     "Return a-b if a>b, otherwise return a+b"
     if a > b:
-	return a - b
+        return a - b
     else:
-	return a + b
+        return a + b
 
 print(myfunc(A, 2))
 \end{minted}
@@ -825,11 +828,11 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:orgf09e5f5},fragile]{Vectorize a function}
+\begin{frame}[label={sec:orga73719b},fragile]{Vectorize a function}
  To allow us to use this function over an array, we can use the \texttt{np.vectorize} function
 to create a new function, which applies \texttt{myfunc} over each element.
 
-\begin{minted}[]{python}
+\begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 vfunc = np.vectorize(myfunc)
 print(vfunc(A, 2))
 \end{minted}
@@ -844,7 +847,7 @@ Here we pass the function we want to vectorize \texttt{myfunc} to the \texttt{np
 function. The return of this function is another function!
 \end{frame}
 
-\begin{frame}[label={sec:orgd5caa50}]{Reading more}
+\begin{frame}[label={sec:org16e6092}]{Reading more}
 We've only scratched the surface of what NumPy can offer us! One of the best starting
 points for learning about NumPy is NumPy's own user guide on the web: \url{https://numpy.org/doc/stable/user/index.html}
 
