--- a/2022-2023/Programming Level-up/2.object-oriented-programming.tex
+++ b/2022-2023/Programming Level-up/2.object-oriented-programming.tex
@@ -1,4 +1,4 @@
-% Created 2022-08-19 ven. 10:45
+% Created 2022-09-15 Thu 12:33
 % Intended LaTeX compiler: pdflatex
 \documentclass[10pt]{beamer}
 \usepackage[utf8]{inputenc}
@@ -24,7 +24,7 @@
 \DefineVerbatimEnvironment{verbatim}{Verbatim}{fontsize=\scriptsize}
 \usetheme{Berkeley}
 \author{Jay Morgan}
-\date{2021-10-01}
+\date{20th September 2022}
 \title{Programming Level-up}
 \subtitle{Lecture 2 - More advanced Python \& Classes}
 \hypersetup{
@@ -43,12 +43,12 @@
 
 
 \section{Proxy}
-\label{sec:orgbe8cf79}
+\label{sec:orgd8ec3d9}
 
 \subsection{Univ-tln proxy}
-\label{sec:orgd1f7480}
+\label{sec:orga9e7702}
 
-\begin{frame}[label={sec:org2001cc4},fragile]{Setting up a proxy in Linux -- environment variables}
+\begin{frame}[label={sec:org955dcd2},fragile]{Setting up a proxy in Linux -- environment variables}
  Environment variables are variables that are set in the Linux environment and are
 used to configure some high-level details in Linux.
 
@@ -62,7 +62,7 @@ Exporting a variable in this way will mean \texttt{VARIABLE\_NAME} will be acces
 you're logged in. Every time you log in you will have to set this variable again.
 \end{frame}
 
-\begin{frame}[label={sec:org21eb05a},fragile]{Setting up a proxy in Linux -- univ-tln specific}
+\begin{frame}[label={sec:org42b790f},fragile]{Setting up a proxy in Linux -- univ-tln specific}
  In the université de Toulon, you're required to use the university's proxy server to
 access the internet. Therefore, in Linux at least, you will have to tell the system
 where the proxy server is with an environment variable.
@@ -76,7 +76,7 @@ export FTP_PROXY='<username>:<password>@proxy.univ-tln.fr:3128'
 \alert{NOTE}: Watch out for special characters in your password! They will have to be URL encoded.
 \end{frame}
 
-\begin{frame}[label={sec:orge0b1395},fragile]{Setting up a proxy in the .bashrc}
+\begin{frame}[label={sec:orgf3aef28},fragile]{Setting up a proxy in the .bashrc}
  If you don't wish to set the variable every time log in, you should enter the same
 commands into a \texttt{.bashrc} in your home directory.
 
@@ -90,12 +90,12 @@ When you log in, the \texttt{.bashrc} file will be run and these variables will 
 \end{frame}
 
 \section{Dealing with Errors}
-\label{sec:org2ef4256}
+\label{sec:orgc3a9633}
 
 \subsection{Exceptions}
-\label{sec:org1aa8008}
+\label{sec:orge4676d7}
 
-\begin{frame}[label={sec:org7902498},fragile]{Dealing with Errors}
+\begin{frame}[label={sec:org2165792},fragile]{Dealing with Errors}
  When programming, its good to be defensive and handle errors gracefully. For example,
 if you're creating a program, that as part of its process, reads from a file, its
 possible that this file may not exist at the point the program tries to read it. If
@@ -106,7 +106,7 @@ continue without the file. In these cases, we will want to appropriately catch t
 error to prevent it from stopping Python.
 \end{frame}
 
-\begin{frame}[label={sec:org40413a4},fragile]{Try-catch}
+\begin{frame}[label={sec:orgcd14029},fragile]{Try-catch}
  Try-catches are keywords that introduce a scope where the statements are executed,
 and if an error (of a certain type IndexError in this example) occurs, different
 statements could be executed.
@@ -130,7 +130,7 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:orgbc5b2b4},fragile]{Try-catch -- capturing messages}
+\begin{frame}[label={sec:orgf41451f},fragile]{Try-catch -- capturing messages}
  If we wanted to include the original error message in the print statement, we can use
 the form:
 
@@ -156,7 +156,7 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org45aa20b}]{Types of exceptions}
+\begin{frame}[label={sec:orge407777}]{Types of exceptions}
 There are numerous types of errors that could occur in a Python. Here are just some
 of the most common.
 
@@ -170,7 +170,7 @@ of the most common.
 The full list of exceptions in Python 3 can be found at: \url{https://docs.python.org/3/library/exceptions.html}
 \end{frame}
 
-\begin{frame}[label={sec:org0152903},fragile]{Assertions}
+\begin{frame}[label={sec:org3f8fea5},fragile]{Assertions}
  One of the previous errors (\texttt{AssertionError}) occurs when an assert statement
 fails. Assert is a keyword provided to test some condition and raise an error if the
 condition is false. It typically requires less code than an \texttt{if}-statement that raises
@@ -189,11 +189,11 @@ Here we are checking that the divisor is not a 0, in which case division is not 
 \end{frame}
 
 \section{OOP}
-\label{sec:org6204ecc}
+\label{sec:org35b5a8b}
 \subsection{Classes}
-\label{sec:org4a7ad4d}
+\label{sec:org3e1912c}
 
-\begin{frame}[label={sec:orgc949d8d}]{Introduction to classes}
+\begin{frame}[label={sec:orgde904d4}]{Introduction to classes}
 A class is some representation (can be abstract) of an object. Classes can be used to
 create some kind of structure that can be manipulated and changed, just like the ways
 you've seen with lists, dictionaries, etc.
@@ -205,7 +205,7 @@ But to properly understand how classes work, and why we would want to use them, 
 should take a look at some examples.
 \end{frame}
 
-\begin{frame}[label={sec:orgfb12de4},fragile]{Basic syntax}
+\begin{frame}[label={sec:orgca5d415},fragile]{Basic syntax}
  We're going to start off with the very basic syntax, and build up some more complex
 classes.
 
@@ -221,7 +221,7 @@ class <name_of_class>:
 \end{minted}
 \end{frame}
 
-\begin{frame}[label={sec:orgc661b94},fragile]{Init method}
+\begin{frame}[label={sec:org1b0f210},fragile]{Init method}
  The \texttt{\_\_init\_\_} function is a function that gets called automatically as soon as a class
 is made. This init function can take many arguments, but must always start with a
 \texttt{self}.
@@ -242,7 +242,7 @@ class Coordinate:
 \end{minted}
 \end{frame}
 
-\begin{frame}[label={sec:orgd59f369},fragile]{Instantiating}
+\begin{frame}[label={sec:org61f3c94},fragile]{Instantiating}
  To create an \emph{instance} of this class, call the name of the class as you would a
 function, and pass any parameters you've defined in the init function.
 
@@ -260,7 +260,7 @@ point_1 = Vector(5, 2)
 \end{minted}
 \end{frame}
 
-\begin{frame}[label={sec:orgb3ce4cd},fragile]{Class variables}
+\begin{frame}[label={sec:org577b5da},fragile]{Class variables}
  In the previous example, we've been creating a class variables by using
 \texttt{self.<variable\_name>}. This is telling Python \emph{this class should have a variable of
 this name}.
@@ -288,7 +288,7 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org06a0395},fragile]{Class Methods}
+\begin{frame}[label={sec:org1da58a0},fragile]{Class Methods}
  A class can have many methods associated with it. To create a new method, we create a
 function within the scope of the class, remember that the first parameter of the
 function should be \texttt{self}.
@@ -320,7 +320,7 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org9b73e65},fragile]{dunder-methods}
+\begin{frame}[label={sec:orgb9d5030},fragile]{dunder-methods}
  While we could, for example, create a function called \texttt{.print()}, sometimes we would
 like to use the in built functions like \texttt{print()}. When creating a class, there is a
 set of \emph{dunder-methods} (double-under to reference the two '\texttt{\_\_}' characters either side
@@ -330,7 +330,7 @@ One of these dunder-methods is \texttt{\_\_repr\_\_}, which allows us to specify
 looks when its printed.
 \end{frame}
 
-\begin{frame}[label={sec:org1a75e57},fragile]{dunder-methods}
+\begin{frame}[label={sec:orgf3c2c29},fragile]{dunder-methods}
  \begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 class OldVector:
     def __init__(self, x, y):
@@ -357,7 +357,7 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org8ad744a},fragile]{dunder-methods}
+\begin{frame}[label={sec:org913833c},fragile]{dunder-methods}
  There are many more dunder-methods you should know when creating classes. We shall go through:
 
 \begin{itemize}
@@ -369,7 +369,7 @@ Results:
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org4717e23},fragile]{\texttt{\_\_len\_\_}}
+\begin{frame}[label={sec:org20f9a82},fragile]{\texttt{\_\_len\_\_}}
  The \texttt{\_\_len\_\_} function allows us to specify how the \texttt{len()} function acts on the
 class. Take this hypothetical dataset. We create a \texttt{\_\_len\_\_} function that returns the
 length of the unique elements in the dataset.
@@ -393,7 +393,7 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:orgaaf0fee},fragile]{\texttt{\_\_getitem\_\_}}
+\begin{frame}[label={sec:org1014c56},fragile]{\texttt{\_\_getitem\_\_}}
  Next \texttt{\_\_getitem\_\_} allows us to index over a class. This new function must include \texttt{self}
 and a variable to pass the index. Here I've used \texttt{idx}. In this function I am simply
 indexing on the on the classes \texttt{self.data}.
@@ -416,7 +416,7 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org8952eda},fragile]{\texttt{\_\_call\_\_}}
+\begin{frame}[label={sec:orgdd6ed34},fragile]{\texttt{\_\_call\_\_}}
  In a small number of cases, it is nice to use the class just like a function. This is
 what \texttt{\_\_call\_\_} allows us to do. In this function we specify what should happen when
 class is 'called' like a function. In this simple example, we are creating a function
@@ -439,7 +439,7 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:orgfb0bbd5},fragile]{\texttt{\_\_iter\_\_} and \texttt{\_\_next\_\_}}
+\begin{frame}[label={sec:org6cf1742},fragile]{\texttt{\_\_iter\_\_} and \texttt{\_\_next\_\_}}
  \texttt{\_\_iter\_\_} and \texttt{\_\_next\_\_} allow us to make our class iterable, i.e. we can use it in a
 \texttt{for} loop for example.
 
@@ -449,7 +449,7 @@ The \texttt{\_\_iter\_\_} function should define what happens when we start the 
 Let's take a look at an example where we have an iterable set of prime numbers.
 \end{frame}
 
-\begin{frame}[label={sec:orgd3229f8},fragile]{\texttt{\_\_iter\_\_} and \texttt{\_\_next\_\_}}
+\begin{frame}[label={sec:org1445943},fragile]{\texttt{\_\_iter\_\_} and \texttt{\_\_next\_\_}}
  \begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 class Primes:
     def __init__(self):
@@ -472,7 +472,7 @@ class Primes:
 \end{minted}
 \end{frame}
 
-\begin{frame}[label={sec:org027467f},fragile]{\texttt{\_\_iter\_\_} and \texttt{\_\_next\_\_}}
+\begin{frame}[label={sec:org7b66c49},fragile]{\texttt{\_\_iter\_\_} and \texttt{\_\_next\_\_}}
  And now we can iterate over this class
 
 \begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
@@ -492,7 +492,7 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:orgcfec86b},fragile]{Inheritance}
+\begin{frame}[label={sec:org3b9382a},fragile]{Inheritance}
  One special thing about OOP is that its normally designed to provide inheritance --
 this is true in Python. Inheritance is where you have a base class, and other classes
 inherit from this base class. This means that the class that inherits from the base
@@ -514,7 +514,7 @@ Here we have created a simple class called Animal, that has two functions, one o
 which will raise an error if its called.
 \end{frame}
 
-\begin{frame}[label={sec:org5b365ec},fragile]{Inheritance}
+\begin{frame}[label={sec:org120a087},fragile]{Inheritance}
  We can inherit from this Animal class by placing our base class in \texttt{()} after the new
 class name.
 
@@ -533,7 +533,7 @@ class Duck(Animal):
 \end{minted}
 \end{frame}
 
-\begin{frame}[label={sec:orgc2a9be8},fragile]{Inheritance}
+\begin{frame}[label={sec:org76a0b6a},fragile]{Inheritance}
  Look at what happens when we create instances of these classes, and call the
 functions. First we see that the correct method has been called. I.e. for the duck
 class, the correct \texttt{walk} method was called.
@@ -553,7 +553,7 @@ Results:
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:orgf21c525},fragile]{Inheritance}
+\begin{frame}[label={sec:org3f097ac},fragile]{Inheritance}
  But what happens if we call the \texttt{.growl()} method?
 
 \begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
@@ -574,12 +574,12 @@ class variables.
 \end{frame}
 
 \section{Exercise}
-\label{sec:org7322f9b}
+\label{sec:org3a78ce5}
 
 \subsection{Exercise}
-\label{sec:org58c114d}
+\label{sec:org9aa5678}
 
-\begin{frame}[label={sec:org522b7cb},fragile]{An object based library system}
+\begin{frame}[label={sec:org0e53eae},fragile]{An object based library system}
  We're going to improve on our library system from last lecture. Instead of a
 \texttt{functional} style of code, we're going to use a OOP paradigm to create our solution.
 
@@ -599,7 +599,7 @@ this class variable will be initialised to an empty list.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org885e330},fragile]{Adding data}
+\begin{frame}[label={sec:org854a6a2},fragile]{Adding data}
  We will want to include a function to add data to our database.
 
 Create a class method called \texttt{add}, that takes three arguments (in addition to \texttt{self} of
@@ -622,13 +622,13 @@ Hitchhikers Guide to the Galaxy & Douglas Adams & 1879\\
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org77fb967},fragile]{Locating a book}
+\begin{frame}[label={sec:orgcd200bc},fragile]{Locating a book}
  Create a class method called locate by tile that takes the title of the book to look
 up, and returns the dictionary of all books that have this title. Unlike last time,
 we don't need to pass the \texttt{data} as an argument, as its contained within the class.
 \end{frame}
 
-\begin{frame}[label={sec:org181149b},fragile]{Updating our database}
+\begin{frame}[label={sec:org7492a01},fragile]{Updating our database}
  Create a class method called \texttt{update} that takes 4 arguments:, 1) the key of the value
 we want to update 2) the value we want to update it to 3) the key we want to check
 to find out if we have the correct book and 4) the value of the key to check if we
@@ -642,7 +642,7 @@ db.update(key="release year", value=1979, where_key="title",
 Use this to fix the release data of the Hitchhiker's book.
 \end{frame}
 
-\begin{frame}[label={sec:org741e82a},fragile]{Printed representation}
+\begin{frame}[label={sec:org265324c},fragile]{Printed representation}
  Using the \texttt{\_\_str\_\_} dunder-method (this is similar to \texttt{\_\_repr\_\_} as we saw before),
 create a function that prints out a formatted representation of the entire database
 as a string. Some of the output should look like:
@@ -659,7 +659,7 @@ Entry 1:
 \end{minted}
 \end{frame}
 
-\begin{frame}[label={sec:org721f50d},fragile]{Extending our OOP usage}
+\begin{frame}[label={sec:org57c270e},fragile]{Extending our OOP usage}
  So far we've used a list of dictionaries. One issue with this is that there is no
 constraints on the keys we can use. This will certainly create problems if certain
 keys are missing.
@@ -672,7 +672,7 @@ Modify the database to, instead of working with a list of dictionaries, work wit
 list of Book objects.
 \end{frame}
 
-\begin{frame}[label={sec:org3fc7ef3},fragile]{Printed representation -- challenge.}
+\begin{frame}[label={sec:org55ec388},fragile]{Printed representation -- challenge.}
  Improve upon the printed representation of the last exercise but instead of bulleted
 lists, use formatted tables using \texttt{f-string} formatting
 (\url{https://zetcode.com/python/fstring/}).
